--- a/techvology-app/package.json
+++ b/techvology-app/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
