--- a/techvology-app/package.json
+++ b/techvology-app/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "axios-jwt": "^2.1.1",
     "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-token-auth": "^2.3.8",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
